Export `predict` method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(rrinterpolate.slope)
 export(rrplot)
 exportClasses(patchingFunction)
 exportClasses(patchingPolynomial)
+exportMethods(predict)
